feat: add css styles

--- a/style.css
+++ b/style.css
@@ -7,10 +7,197 @@ html, body {
 table {
     border-collapse: collapse;
 }
-table.border td, table.border th {
-    padding: 5px;
-    border: 1px solid #c0c0c0;
-}
-table.border th {
-    background: #e0e0e0;
-}
+    html {
+        scroll-behavior: smooth;
+      }
+      @font-face {
+        font-family: 'Open Sans';
+        src: url("assets/fonts/OpenSans-Light.ttf");
+        font-weight: 100;  
+      }
+      
+      @font-face {
+          font-family: 'Open Sans';
+          src: url("assets/fonts/OpenSans-Regular.ttf");
+          font-weight: 300;  
+        }
+      
+      * {box-sizing: border-box;}
+      
+      .header {
+              background-color: cadetblue;
+      }
+      
+      .footer {
+              background-color: cadetblue;
+      }
+      
+      
+      .body {
+           font-family: 'Open Sans';
+           min-height: 100vh;
+           margin: 0;
+           padding: 0;  
+           display: flex;
+           flex-direction: column;
+           justify-content: space-between;  
+               }
+            
+      .container {
+            max-width: 1440px;
+            margin: 0 auto;
+             }
+      
+      
+                  
+      
+      .nav-list {
+           display: flex;
+           flex-wrap: wrap;
+           justify-content: flex-start;
+           align-items: center;
+           list-style: none;
+           
+          }
+      
+      .nav-link {
+             padding: 0 20px;
+           line-height: 50px;
+           font-size: 18px;
+           text-decoration: none;
+           transition: 0.3s; 
+           
+      }
+      
+      .nav-item a {
+             color: yellow;
+             text-decoration: none;
+             transition: color 0,5s;
+      
+      }
+      
+      .nav-item a:hover {
+             color: greenyellow;
+      }
+      
+      .contacts {
+               
+            list-style: none;
+            margin-left: 0px;
+            padding-left: 0px;
+      }
+      
+      .bold {
+             font-weight: bold;
+       }
+      
+       .main-container {
+             display: flex;
+             flex-wrap: wrap;
+              } 
+       
+      .section {
+        padding-left: 40px;
+             width: 50%;
+      
+      }
+        
+      .section-profile {
+            display: flex; 
+             flex-wrap: wrap;
+              justify-content: flex-start;
+              align-items: center;
+            }
+            
+      .round {
+              border-radius: 80%;
+              border: 5px solid cadetblue;
+              margin: 10px 30px;
+              
+      }
+      
+      .myname {
+              margin: 0 0 0 30px;
+             
+              font-family: 'Open Sans';
+              font-size: 35px;
+              font-weight: bold;
+              text-transform: uppercase;
+              color: cadetblue;
+      }
+      
+      @media (max-width: 768px) {
+        .section {
+          width: 100%;
+        }
+      }
+      
+      .section-title {
+        font-family: 'Open Sans';
+        font-size: 25px;
+        color: cadetblue;
+      }
+      
+      
+      .container-1 {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin: 5 0;
+        align-items: center;
+      }
+      
+      .author {
+        font-size: 25;
+        color: yellow;
+      }
+      
+      .author a {
+        font-size: 25;
+        color: yellow;
+        text-decoration: none;
+        transition: color 0,5s;
+        transition: .3s;
+      } 
+      
+      .author a:hover {
+        color: yellowgreen;
+      }
+      
+      .cont-item {
+        list-style-position: outside;
+        margin-bottom: 10px;
+      }
+      
+       .code {
+      font-size: 18px;
+      
+       }
+      
+       .qualities {
+        list-style-position: outside;
+        
+       }
+      
+      
+       .section::before {
+        content: '';
+        display: block;
+        border-top: 2px solid cadetblue;
+        
+        }
+      
+        .skills {
+          margin-left: 1em;
+          padding-left: 1em;
+        }
+      
+        .education {
+          margin-left: 1em;
+          padding-left: 1em;
+        }
+      
+        .languages {
+          margin-left: 1em;
+          padding-left: 1em;
+        }
