--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ table {
       .nav-item a {
              color: yellow;
              text-decoration: none;
-             transition: color 0,5s;
+             transition: color 0.5s;
       
       }
       
@@ -143,12 +143,12 @@ table {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin: 5 0;
+        margin: 5 auto;
         align-items: center;
       }
       
       .author {
-        font-size: 25;
+        font-size: 25px;
         color: yellow;
       }
       
@@ -156,7 +156,7 @@ table {
         font-size: 25;
         color: yellow;
         text-decoration: none;
-        transition: color 0,5s;
+        transition: color 0.5s;
         transition: .3s;
       } 
       
