--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ table {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin: 5 auto;
+        margin: 5;
         align-items: center;
       }
       
@@ -152,16 +152,16 @@ table {
         color: yellow;
       }
       
+      
       .author a {
-        font-size: 25;
+        font-size: 25px;
         color: yellow;
         text-decoration: none;
-        transition: color 0.5s;
-        transition: .3s;
-      } 
+        transition: 0.5s;
+    } 
       
       .author a:hover {
-        color: yellowgreen;
+        color: #9acd32;
       }
       
       .cont-item {
